syntax = "proto3";

package proto.products.v1;

option go_package = "github.com/koheiyamayama/grpc-up-and-running-samples/gen/proto/products/v1;productv1";

service ProductService {
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);
  rpc ListProducts (ListProductsRequest) returns (ListProductsResponse);
  rpc RegisterProducts (RegisterProductsRequest) returns (RegisterProductsResponse);
  rpc UnregisterProducts (UnregisterProductsRequest) returns (UnregisterProductsResponse);
}

message GetProductRequest {
  string product_id = 1;
}

message GetProductResponse {
  Product product = 1;
}

message ListProductsRequest {
  repeated string product_ids = 1;
}

message ListProductsResponse {
  repeated Product products = 1;
}

message RegisterProductsRequest {
  repeated string product_ids = 1;
}

message RegisterProductsResponse {
  repeated FailedProduct failed_products = 1;
}

message UnregisterProductsRequest {
  repeated string product_ids = 1;
}

message UnregisterProductsResponse {
  repeated FailedProduct failed_products = 1;
}

message Product {
  string id = 1;
  int64 sale_price = 2;
  int64 original_price = 3;
  repeated Category categories = 4;
  string name = 5;
}

message FailedProduct {
  int64 sale_price = 2;
  int64 original_price = 3;
  repeated Category categories = 4;
  string name = 5;  
}

message Category {
  string id = 1;
  string name = 2;
}
